k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow-app
  type: NodePort
  ports:
    - port: 4499
      targetPort: 4499
      nodePort: 31000  # Access via http://<node-ip>:31000
